--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flash_chat">
+    package="co.tyian_122.flash_chat">
    <application
         android:label="flash_chat"
         android:name="${applicationName}"
