--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0<3.0.0"
+  sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
   flutter:
@@ -15,7 +15,7 @@ dependencies:
   firebase_core: ^2.1.1
   firebase_auth: ^4.1.1
   cloud_firestore: ^4.0.4
-  modal_progress_hud: ^0.1.3
+  google_nav_bar: ^5.0.6
 
 
 dev_dependencies:
