--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^4.2.2
-  firebase_core: ^2.1.1
-  firebase_auth: ^4.1.1
-  cloud_firestore: ^4.0.4
+  cloud_firestore: ^4.8.0
+  firebase_core: ^2.13.1
+  firebase_auth: ^4.6.3
   google_nav_bar: ^5.0.6
+  flutter_chat_bubble: ^2.0.2
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
