--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,22 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons:
   animated_text_kit: ^4.2.2
   cloud_firestore: ^4.8.0
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.3
-  google_nav_bar: ^5.0.6
+  firebase_storage: ^11.2.5
   flutter_chat_bubble: ^2.0.2
+  provider: ^6.0.5
+  google_fonts: ^5.1.0
 
 
 dev_dependencies:
